--- a/SpringMVC/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC/src/main/webapp/WEB-INF/web.xml
@@ -8,11 +8,23 @@
 	
 	<!-- ApplicationContext(이하 BeanFactory) 를 웹에서는 아래와 같이 이용한다.
 		 Context : ServletContext 객체 생성 
+		 
+		 ApplicationContext(BeanFactory)는 스프링의 핵심을 담당하며, 여기서 Bean이란 스프링이 제어권을 가지고 직접
+		 만들고 관계를 부여하는 오브젝트를 말한다.
+		 
+		 동시에 스프링 빈은 스프링 컨테이너가 생성과 관계설정, 사용등을 제어해주는 제어의 역전이 적용된 오브젝트를 가르키는 말이다.
+		 
+		 이와 같이 스프링에서는 빈의 생성과 관계설정 같은 제어를 담당하는 IoC 오브젝트를 BeanFactory라고 부른다.
+		 보통 BeanFactory보다는 이를 좀 더 확장한 ApplicaitonContext 를 주로 사용한다.
+		 
+		 ApplicaitonContext는 별도의 정보를 참고해서 빈(오브젝트)의 생성, 관계설정 등의 제어 작업을 총괄한다.
+		 
+		 웹어플리케이션은 ContextLoaderListener Class 나 ContextLoaderServlet Class에 의해서 자동으로 ApplicationContext(XmlWebApplicationContext)가 로드된다.
 	 -->
 	 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/META-INF/spring/root-context.xml </param-value>
+		<param-value>classpath:/META-INF/spring/*-context.xml </param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -44,7 +56,7 @@
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 			-->
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:/META-INF/spring/servlet-context.xml</param-value>
+			<param-value>classpath:/META-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
